fix Toggle Sprint keybind name on 1.21.10

--- a/src/main/resources/assets/legacyskyblock/lang/en_us.json
+++ b/src/main/resources/assets/legacyskyblock/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "category.legacyskyblock": "Legacy Skyblock",
-  "key.legacyskyblock.togglesprint": "Toggle Sprint"
+  "key.category.minecraft.legacyskyblock": "Legacy Skyblock",
+  "key.category.legacyskyblock.togglesprint": "Toggle Sprint"
 }
